[package]
description = "just for oauth2 login"
edition = "2021"
license = "MIT"
name = "just-auth"
version = "0.1.1"

[dependencies]
async-trait = "0.1"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = "3.9"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}
